[package]
repository = "https://github.com/SuperInstance/git-cuda-agent"
name = "git-cuda-agent"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated agent template — clone, build, run"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
cc = "1"